<resources>
    <string name="app_name">Health-Yatra</string>
    <string name="loading">Loading....</string>
    <string name="health_yatra_logo">Health-Yatra Logo</string>
    <string name="health_yatra">Health-Yatra</string>
    <string name="your_health_our_priority">Your health, our priority</string>
    <string name="LogoImage">logoImage</string>
    <string name="welcome_to_health_yatra">Welcome to Health-Yatra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter Your Name/Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_aadhaar_number">Enter Aadhaar Number</string>
    <string name="role">Role</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="help">Help</string>
    <string name="plus">+</string>
    <string name="healthcare_logo">HealthCare Logo</string>
    <string name="hospital">Hospital</string>
    <string name="better_care_better_life">Better Care, Better Life</string>
</resources>