<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:fillViewport="true"
    android:clipToPadding="false"
    tools:context=".fragment.SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="80dp">

        <!-- Email -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            android:background="@drawable/bg_edittext"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:maxLength="20"
            android:textColorHint="#FB959595"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Username -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:autofillHints="username"
            android:background="@drawable/bg_edittext"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:maxLength="20"
            android:textColorHint="#FB959595"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <!-- Phone -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:autofillHints="phone"
            android:background="@drawable/bg_edittext"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:textColorHint="#FB959595"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username" />

        <!-- Aadhaar -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/Aadhaar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:importantForAutofill="no"
            android:background="@drawable/bg_edittext"
            android:hint="@string/enter_aadhaar_number"
            android:inputType="number"
            android:maxLength="12"
            android:textColorHint="#FB959595"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneNumber" />

        <!-- Password -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:autofillHints="password"
            android:background="@drawable/bg_edittext"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColorHint="#FB959595"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Aadhaar" />

        <!-- Role -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/roleLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:hint="@string/role"
            android:textColorHint="#FB959595"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:textColor="@color/text_primary"

                android:inputType="none"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Register -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="#1976D2"
            android:text="@string/register"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/roleLayout" />

        <!-- Already Registered -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:layout_marginTop="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerBtn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_registered"
                android:textColor="@color/text_primary"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
               android:layout_marginStart="4dp"
                android:text="@string/login"
                android:textColor="@color/text_primary"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>